k8s/tasks-app-single.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasks-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-app
  namespace: tasks-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-app
  template:
    metadata:
      labels:
        app: tasks-app
    spec:
      hostAliases:
        - ip: ${ZITADEL_IP}
          hostnames:
            - zitadel.test
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tasks-app
          image: ${IMAGE}
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nats-tls
              readOnly: true
              mountPath: /etc/nats/ca.crt
              subPath: ca.crt
            - name: nats-app-cred
              readOnly: true
              mountPath: /app.cred
              subPath: app.cred
      volumes:
        - name: nats-tls
          secret:
            secretName: nats-tls
        - name: nats-app-cred
          secret:
            secretName: nats-app-cred
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-app
  namespace: tasks-app
spec:
  selector:
    app: tasks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-app-external
  namespace: tasks-app
spec:
  type: ExternalName
  externalName: nats.examples.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: tasks-app
spec:
  stripPrefix:
    prefixes:
      - /ws
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasks-app
  namespace: tasks-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: tasks-app-strip-prefix@kubernetescrd
spec:
  # tls:
  #   - hosts:
  #       - tasks-app.${DOMAIN}
  #     secretName: letsencrypt-staging-cloudflare-tls
  rules:
    # - host: tasks-app.${DOMAIN}
    - host: tasks-app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasks-app
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: tasks-app-external
                port:
                  number: 8080
