k8s/tasks-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasks-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-app
  namespace: tasks-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-app
  template:
    metadata:
      labels:
        app: tasks-app
    spec:
      hostAliases:
        - ip: __GENERATED__
          hostnames:
            - zitadel.local
      containers:
        - name: tasks-app
          image: crk3sdemo.azurecr.io/tasks-app:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nats-app-cred
              readOnly: true
              mountPath: /app.cred
              subPath: app.cred
      volumes:
        - name: nats-app-cred
          secret:
            secretName: nats-app-cred
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-app
  namespace: tasks-app
spec:
  selector:
    app: tasks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-app-external
  namespace: tasks-app
spec:
  type: ExternalName
  externalName: nats.examples.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: tasks-app
spec:
  stripPrefix:
    prefixes:
      - /ws
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasks-app
  namespace: tasks-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: tasks-app-strip-prefix@kubernetescrd
spec:
  rules:
    - host: tasks-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasks-app
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: tasks-app-external
                port:
                  number: 8080
